<resources>
    <string name="app_name">My to do list</string>
    <string name="connection">Connection</string>
    <string name="connection_title">Nice to see you again</string>
    <string name="connection_subtitle">Be productive</string>
    <string name="sign_up">Create an account</string>
    <string name="welcome">Welcome</string>
    <string name="sentence_link">on our application</string>
    <string name="create_account_prompt">Don\'t have an account ? Create an account here</string>
    <string name="success_created_account">Successfully created account !</string>
    <string name="success_connection">Successfully connection !</string>
    <string name="exit">Exit</string>
    <string name="missing_fields">Please complete all fields</string>
    <string name="wrong_mail_format">The mail must be in format example@example.com</string>
    <string name="user_already_exists">User already exists</string>
    <string name="logout">Logout</string>
    <string name="titleLocalTodo">My local todolists</string>
    <string name="modify">Modify</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="titleSharedTodo">Shared todolists</string>
    <string name="titleSharedTodoWithMe">Shared with me</string>
    <string name="user_doesnt_exist">This user doesn\'t exist</string>
    <string name="todolist_shared">Todolist shared !</string>
    <string name="mail_is_your">It is your mail !</string>
    <string name="non_working">Non working</string>
    <string name="quit_confirmation_message">Are you sure you want to quit ?</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="warning">Warning !</string>
    <string name="mail">Mail</string>
    <string name="password">Password</string>
    <string name="pseudo">Pseudo</string>
    <string name="create">Create</string>
</resources>