<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".MainActivity">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="149dp"
            android:layout_height="152dp"
            android:layout_marginTop="16dp"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:gravity="center" />

        <TextView
            android:id="@+id/sentenceLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sentence_link"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:gravity="center" />

        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/app_name"
            android:textColor="@color/primaryColor"
            android:textSize="32sp"
            android:textStyle="bold"
            android:gravity="center" />

        <Button
            android:id="@+id/btnGoToConnection"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_marginTop="32dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/primaryColor"
            android:onClick="clickOnConnexion"
            android:text="@string/connection"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnGoToSignUp"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/primaryColor"
            android:onClick="clickOnCreateAccount"
            android:text="@string/sign_up"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnExit"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/primaryColor"
            android:onClick="clickOnLeave"
            android:text="@string/exit"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>