<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".View.SharedTodoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/sharedTodoToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primaryColor"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme" />

            <TextView
                android:id="@+id/titleSharedTodoActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titleLocalTodo" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/deco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="clickOnLogout"
                android:text="@string/logout" />

            <Button
                android:id="@+id/local"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="clickOnGoToLocalTodo"
                android:text="@string/titleLocalTodo" />

            <Button
                android:id="@+id/sharedWithMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/titleSharedTodoWithMe" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ListView
                android:id="@+id/sharedTodoList"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </ListView>

        </RelativeLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>