<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".View.MyLocalTodoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/localTodoToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primaryColor"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme" />

            <TextView
                android:id="@+id/titleLocalTodoActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titleLocalTodoActivity" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/deco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="clickOnLogout"
                android:text="@string/logout" />

            <Button
                android:id="@+id/shared"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="clickOnGoToSharedTodo"
                android:text="@string/share" />

            <Button
                android:id="@+id/sharedWithMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/titleSharedTodoWithMe" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Modifier la position du FloatingActionButton -->
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnGoToAddLocalTodo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:clickable="true"
                android:onClick="clickOnGoToAddLocalTodo"
                android:src="@android:drawable/ic_input_add"
                app:backgroundTint="@color/primaryColor"
                app:fabSize="auto"/>

            <ListView
                android:id="@+id/localTodoList"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </ListView>

        </RelativeLayout>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>